--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
-*.classpath
-*.project
-*.settings
-*.prefs
-*.class
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
