--- a/eureka-feign/src/main/resources/application.properties
+++ b/eureka-feign/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8070
 
-eureka.client.serviceUrl.defaultZone=http://192.168.1.40:8090/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8090/eureka/
 
 feign.hystrix.enabled=true
 
