--- a/eureka-server-a/src/main/resources/application.yml
+++ b/eureka-server-a/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8100
+  port: 9100
 
 spring:
   application:
@@ -7,16 +7,15 @@ spring:
 
 eureka:
   instance:
-    hostname: 127.0.0.1     #注册中心地址
+    hostname: 127.0.0.1
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:9100/eureka/     #客户端调用地址
-    ###是否将自己注册到Eureka服务中,因为该应用本身就是注册中心，不需要再注册自己（集群的时候为true）
+      defaultZone: http://${eureka.instance.hostname}:9200/eureka/     #register to another eureka server
+    #register itself to Eureka server,if itself is register center, false，but in cluster true
     register-with-eureka: true
-    ###是否从Eureka中获取注册信息,因为自己为注册中心,不会在该应用中的检索服务信息
     fetch-registry: true
 
-  ###测试环境、开发环境可以关闭自我保护机制，保证服务不可用时及时剔除
+  #in dev, test env can set it to false to make sure exclude it when the service is down
   server:
     enable-self-preservation: false
     eviction-interval-timer-in-ms: 2000
