--- a/order-api/src/main/resources/application.yml
+++ b/order-api/src/main/resources/application.yml
@@ -1,19 +1,20 @@
 server:
-  port: 8082
+  port: 8200
 
 spring:
   application:
     name: order-api
-###服务注册到eureka注册中心的地址
+
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8100/eureka/,http://zpc:123456@127.0.0.1:9100/eureka/
-    ###因为该应用为服务提供者，是eureka的一个客户端，需要注册到注册中心
+      defaultZone: http://127.0.0.1:9100/eureka/,http://127.0.0.1:9200/eureka/
     register-with-eureka: true
-    ###是否需要从eureka上检索服务
     fetch-registry: true
 
 feign:
   hystrix:
     enabled: true
+
+swagger:
+  base-package: com.kevin.orderapi
