--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
     <modules>
         <module>eureka-server-a</module>
         <module>eureka-server-b</module>
+        <module>config-server</module>
         <module>gateway</module>
         <module>order-api</module>
         <module>product-api</module>
