--- a/order-api/src/main/resources/application.yml
+++ b/order-api/src/main/resources/application.yml
@@ -5,6 +5,20 @@ spring:
   application:
     name: order-api
 
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      # 配置消费者消息offset是否自动重置(消费者重连会能够接收最开始的消息)
+      auto-offset-reset: earliest
+    producer:
+      bootstrap-servers: localhost:9092
+      # 发送的对象信息变为json格式
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+kafka:
+  topic:
+    my-topic: my-topic
+    my-topic2: my-topic2
+
 eureka:
   client:
     service-url:
